--- a/client/src/scss/base/_global.scss
+++ b/client/src/scss/base/_global.scss
@@ -8,367 +8,617 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
- html {
-    line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
-  }
-  
-  /* Sections
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
        ========================================================================== */
-  
-  /**
+
+/**
      * Remove the margin in all browsers.
      */
-  
-  body {
-    margin: 0;
-  }
-  
-  /**
+
+body {
+  margin: 0;
+}
+
+/**
      * Render the `main` element consistently in IE.
      */
-  
-  main {
-    display: block;
-  }
-  
-  /**
+
+main {
+  display: block;
+}
+
+/**
      * Correct the font size and margin on `h1` elements within `section` and
      * `article` contexts in Chrome, Firefox, and Safari.
      */
-  
-  h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
-  }
-  
-  /* Grouping content
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
        ========================================================================== */
-  
-  /**
+
+/**
      * 1. Add the correct box sizing in Firefox.
      * 2. Show the overflow in Edge and IE.
      */
-  
-  hr {
-    box-sizing: content-box; /* 1 */
-    height: 0; /* 1 */
-    overflow: visible; /* 2 */
-  }
-  
-  /**
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
      * 1. Correct the inheritance and scaling of font size in all browsers.
      * 2. Correct the odd `em` font sizing in all browsers.
      */
-  
-  pre {
-    font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
-  }
-  
-  /* Text-level semantics
+
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
        ========================================================================== */
-  
-  /**
+
+/**
      * Remove the gray background on active links in IE 10.
      */
-  
-  a {
-    background-color: transparent;
-  }
-  
-  /**
+
+a {
+  background-color: transparent;
+}
+
+/**
      * 1. Remove the bottom border in Chrome 57-
      * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
      */
-  
-  abbr[title] {
-    border-bottom: none; /* 1 */
-    text-decoration: underline; /* 2 */
-    text-decoration: underline dotted; /* 2 */
-  }
-  
-  /**
+
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+/**
      * Add the correct font weight in Chrome, Edge, and Safari.
      */
-  
-  b,
-  strong {
-    font-weight: bolder;
-  }
-  
-  /**
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
      * 1. Correct the inheritance and scaling of font size in all browsers.
      * 2. Correct the odd `em` font sizing in all browsers.
      */
-  
-  code,
-  kbd,
-  samp {
-    font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
-  }
-  
-  /**
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
      * Add the correct font size in all browsers.
      */
-  
-  small {
-    font-size: 80%;
-  }
-  
-  /**
+
+small {
+  font-size: 80%;
+}
+
+/**
      * Prevent `sub` and `sup` elements from affecting the line height in
      * all browsers.
      */
-  
-  sub,
-  sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-  }
-  
-  sub {
-    bottom: -0.25em;
-  }
-  
-  sup {
-    top: -0.5em;
-  }
-  
-  /* Embedded content
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
        ========================================================================== */
-  
-  /**
+
+/**
      * Remove the border on images inside links in IE 10.
      */
-  
-  img {
-    border-style: none;
-  }
-  
-  /* Forms
+
+img {
+  border-style: none;
+}
+
+/* Forms
        ========================================================================== */
-  
-  /**
+
+/**
      * 1. Change the font styles in all browsers.
      * 2. Remove the margin in Firefox and Safari.
      */
-  
-  button,
-  input,
-  optgroup,
-  select,
-  textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
-    margin: 0; /* 2 */
-  }
-  
-  /**
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
      * Show the overflow in IE.
      * 1. Show the overflow in Edge.
      */
-  
-  button,
-  input {
-    /* 1 */
-    overflow: visible;
-  }
-  
-  /**
+
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
      * Remove the inheritance of text transform in Edge, Firefox, and IE.
      * 1. Remove the inheritance of text transform in Firefox.
      */
-  
-  button,
-  select {
-    /* 1 */
-    text-transform: none;
-  }
-  
-  /**
+
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
      * Correct the inability to style clickable types in iOS and Safari.
      */
-  
-  button,
-  [type="button"],
-  [type="reset"],
-  [type="submit"] {
-    -webkit-appearance: button;
-  }
-  
-  /**
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
      * Remove the inner border and padding in Firefox.
      */
-  
-  button::-moz-focus-inner,
-  [type="button"]::-moz-focus-inner,
-  [type="reset"]::-moz-focus-inner,
-  [type="submit"]::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
-  }
-  
-  /**
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
      * Restore the focus styles unset by the previous rule.
      */
-  
-  button:-moz-focusring,
-  [type="button"]:-moz-focusring,
-  [type="reset"]:-moz-focusring,
-  [type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText;
-  }
-  
-  /**
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
      * Correct the padding in Firefox.
      */
-  
-  fieldset {
-    padding: 0.35em 0.75em 0.625em;
-  }
-  
-  /**
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
      * 1. Correct the text wrapping in Edge and IE.
      * 2. Correct the color inheritance from `fieldset` elements in IE.
      * 3. Remove the padding so developers are not caught out when they zero out
      *    `fieldset` elements in all browsers.
      */
-  
-  legend {
-    box-sizing: border-box; /* 1 */
-    color: inherit; /* 2 */
-    display: table; /* 1 */
-    max-width: 100%; /* 1 */
-    padding: 0; /* 3 */
-    white-space: normal; /* 1 */
-  }
-  
-  /**
+
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
      * Add the correct vertical alignment in Chrome, Firefox, and Opera.
      */
-  
-  progress {
-    vertical-align: baseline;
-  }
-  
-  /**
+
+progress {
+  vertical-align: baseline;
+}
+
+/**
      * Remove the default vertical scrollbar in IE 10+.
      */
-  
-  textarea {
-    overflow: auto;
-  }
-  
-  /**
+
+textarea {
+  overflow: auto;
+}
+
+/**
      * 1. Add the correct box sizing in IE 10.
      * 2. Remove the padding in IE 10.
      */
-  
-  [type="checkbox"],
-  [type="radio"] {
-    box-sizing: border-box; /* 1 */
-    padding: 0; /* 2 */
-  }
-  
-  /**
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
      * Correct the cursor style of increment and decrement buttons in Chrome.
      */
-  
-  [type="number"]::-webkit-inner-spin-button,
-  [type="number"]::-webkit-outer-spin-button {
-    height: auto;
-  }
-  
-  /**
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
      * 1. Correct the odd appearance in Chrome and Safari.
      * 2. Correct the outline style in Safari.
      */
-  
-  [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    outline-offset: -2px; /* 2 */
-  }
-  
-  /**
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
      * Remove the inner padding in Chrome and Safari on macOS.
      */
-  
-  [type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
-  }
-  
-  /**
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
      * 1. Correct the inability to style clickable types in iOS and Safari.
      * 2. Change font properties to `inherit` in Safari.
      */
-  
-  ::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
-    font: inherit; /* 2 */
-  }
-  
-  /* Interactive
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
        ========================================================================== */
-  
-  /*
+
+/*
      * Add the correct display in Edge, IE 10+, and Firefox.
      */
-  
-  details {
-    display: block;
-  }
-  
-  /*
+
+details {
+  display: block;
+}
+
+/*
      * Add the correct display in all browsers.
      */
-  
-  summary {
-    display: list-item;
-  }
-  
-  /* Misc
+
+summary {
+  display: list-item;
+}
+
+/* Misc
        ========================================================================== */
-  
-  /**
+
+/**
      * Add the correct display in IE 10+.
      */
-  
-  template {
-    display: none;
-  }
-  
-  /**
+
+template {
+  display: none;
+}
+
+/**
      * Add the correct display in IE 10.
      */
-  
-  [hidden] {
-    display: none;
+
+[hidden] {
+  display: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  line-height: 1.3;
+  outline: none;
+  color: #18191F;
+}
+
+html,
+body {
+  background: #ffffff;
+  scroll-behavior: smooth;
+}
+
+/*body{opacity: 0;}*/
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+p {
+  text-decoration: none;
+  list-style: none;
+  margin: 0;
+  outline: none;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+a:hover {
+  text-decoration: none;
+  color: inherit;
+  outline: none;
+}
+
+button {
+  outline: none;
+}
+
+
+
+//Font-Family style
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
+$dancingFont: "Dancing Script", cursive;
+$openSans: "Open Sans", sans-serif;
+
+//Colors
+$white: #ffffff;
+$black: #000000;
+$primary1: #ffbe33;
+$primary2: #222831;
+$textCol: #1f1f1f;
+
+
+/***********Common CSS**************/
+
+body{
+  position: relative;
+  font-family: $openSans;
+}
+
+@mixin wrapper {
+  padding-left: 200px;
+  padding-right: 200px;
+
+  @media all and (max-width: 1600px) {
+    padding-left: 160px;
+    padding-right: 160px;
   }
-  
-
-
-  *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box
-
+  @media all and (max-width: 1440px) {
+    padding-left: 140px;
+    padding-right: 140px;
   }
+  @media all and (max-width: 1280px) {
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+  @media all and (max-width: 1024px) {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  @media all and (max-width: 820px) {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+  @media all and (max-width: 500px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
 
-  //Font-Family style 
-  @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@mixin font60 {
+  font-size: 60px;
 
-  $dancingFont:"Dancing Script", cursive;
-  $openSans: "Open Sans", sans-serif;
+  @media screen and (max-width:1800px) {
+      font-size: 56px;
+  }
+  @media screen and (max-width:1600px) {
+      font-size: 48px;
+  }
+  @media screen and (max-width:1440px) {
+      font-size: 44px;
+  }
+  @media screen and (max-width:1280px) {
+      font-size: 42px;
+  }
+  @media screen and (max-width:720px) {
+      font-size: 32px;
+  }
+}
 
-  //Colors
-  $white: #ffffff;
-  $black: #000000;
-  $primary1: #ffbe33;
-  $primary2: #222831;
-  $textCol: #1f1f1f;
+@mixin font48 {
+  font-size: 48px;
+
+  @media screen and (max-width:1600px) {
+      font-size: 36px;
+  }
+  @media screen and (max-width:1400px) {
+      font-size: 32px;
+  }
+  @media screen and (max-width:1280px) {
+      font-size: 26px;
+  }
+}
+
+@mixin font40 {
+  font-size: 40px;
+
+  @media screen and (max-width:1600px) {
+      font-size: 30px;
+  }
+  @media screen and (max-width:1280px) {
+      font-size: 22px;
+  }
+}
+
+@mixin font36 {
+  font-size: 36px;
+
+  @media screen and (max-width:1600px) {
+      font-size: 28px;
+  }
+  @media screen and (max-width:1280px) {
+      font-size: 20px;
+  }
+}
+
+@mixin font32 {
+  font-size: 32px;
+
+  @media screen and (max-width:1800px) {
+      font-size: 28px;
+  }
+  @media screen and (max-width:1600px) {
+      font-size: 22px;
+  }
+  @media screen and (max-width:1280px) {
+      font-size: 18px;
+  }
+}
+
+@mixin font30 {
+  font-size: 30px;
+
+  @media screen and (max-width:1600px) {
+      font-size: 20px;
+  }
+  @media screen and (max-width:1280px) {
+      font-size: 18px;
+  }
+}
+@mixin font28 {
+  font-size: 28px;
+
+  @media screen and (max-width:1600px) {
+      font-size: 24px;
+  }
+  @media screen and (max-width:1200px) {
+      font-size: 20px;
+  }
+  @media screen and (max-width:720px) {
+      font-size: 18px;
+  }
+}
+
+@mixin font24 {
+  font-size: 24px;
+
+  @media screen and (max-width:1600px) {
+      font-size: 20px;
+  }
+  @media screen and (max-width:1300px) {
+      font-size: 18px;
+  }
+  @media screen and (max-width:720px) {
+      font-size: 16px;
+  }
+}
+
+@mixin font22 {
+  font-size: 22px;
+  @media screen and (max-width:1600px) {
+      font-size: 18px;
+  }
+  @media screen and (max-width:1024px) {
+      font-size: 16px;
+  }
+}
+
+@mixin font20 {
+  font-size: 20px;
+
+  @media screen and (max-width:1600px) {
+      font-size: 18px;
+  }
+  @media screen and (max-width:1400px) {
+      font-size: 16px;
+  }
+  @media screen and (max-width:720px) {
+      font-size: 14px;
+  }
+}
+
+@mixin font18 {
+  font-size: 18px;
+
+  @media screen and (max-width:1600px) {
+      font-size: 16px;
+  }
+  @media screen and (max-width:1400px) {
+      font-size: 14px;
+  }
+}
+
+@mixin font16 {
+  font-size: 16px;
+
+  @media screen and (max-width:1600px) {
+      font-size: 14px;
+  }
+}
+
+@mixin font14  {
+  font-size: 14px;
+}
+
+@mixin font12 {
+  font-size: 12px;
+}
+
+
+$fontW100 : 100;
+$fontW200 : 200;
+$fontW300 : 300;
+$fontW400 : 400;
+$fontW500 : 500;
+$fontW600 : 600;
+$fontW700 : 700;
+$fontW800 : 800;
+$fontW900 : 900;
