working on feature cards

--- a/client/src/scss/module/_header.scss
+++ b/client/src/scss/module/_header.scss
@@ -31,6 +31,7 @@ header{display: flex; justify-content: space-between; align-items: center; @incl
             }
         }
     }
+    .hemburgerMenu{display: none;}
     
     
 }
@@ -61,6 +62,54 @@ header{display: flex; justify-content: space-between; align-items: center; @incl
             ul{gap: 14px;
                 .order-online{padding: 8px 20px;}
             }
+        }
+    }
+}
+@media all and (max-width: 820px){
+    header{
+        .navbar-link{display: none;}
+        .user-items{display: none;}
+        .hemburgerMenu{display: block; position: absolute; right: 29px; top: 29px;z-index: 1;
+            svg{font-size: 30px;
+                path{fill:#fff;}
+            }
+            &:hover{svg{path{fill: #e69c00;}}}
+        }
+        .mblheaderContainer{width: 100%;height: 100vh;position: absolute; top: 0; left: 0; background: #000; display: flex; align-items: center;justify-content: center; flex-flow: column; gap: 20px; transition: 2s ease-in;
+            .mbl-navbar-link{
+                ul{display: flex; flex-flow: column; gap: 12px;
+                    li{padding: 5px 20px; color: #fff; text-align: center; text-transform: uppercase; font-size: 22px; font-family: $openSans; font-weight: $fontW500;
+                     &:hover{color: $primary1;}
+                    }
+                }
+            }
+            .mbl-user-items{
+                ul{display: flex; flex-flow: wrap; align-items: center; gap: 15px;
+                    li{ @include font20;color: #fff; text-align: center; font-family: $openSans; font-weight: $fontW500}
+                    .user-icon{
+                        svg{
+                            path{fill:#fff;height: 20px; width: 20px;}
+                        }
+                        &:hover{svg{path{fill: #e69c00;}}}
+                    }
+                    .cart-icon{ 
+                        svg{
+                            path{fill:#fff;height: 20px; width: 20px;}
+                        }
+                        &:hover{svg{path{fill: #e69c00;}}}
+                    }
+                    .order-online{padding: 8px 30px; background: $primary1; border-radius: 45px; transition: all 0.3s; border: none;
+                        &:hover{background: #e69c00;}
+                    }
+                }
+            }
+        }
+    }
+}
+@media all and (max-width: 720px){
+    header{
+        .logoName{
+            span{font-size: 32px;}
         }
     }
 }
