--- a/client/src/scss/pages/_homepage.scss
+++ b/client/src/scss/pages/_homepage.scss
@@ -1,15 +1,14 @@
-.heroSection{position: relative;height: 100vh;display: flex; flex-flow: column;
-    .heroWrapper{@include wrapper;
+.heroSection{position: relative;margin-bottom: 200px;height: 100vh;
+    .heroWrapper{@include wrapper; height: 100%;
         .bg-box{position: absolute; top: 0;left: 0; width: 100%; height: 100%;
             img{width: 100%; height: 100%; object-fit: cover;}
         }
-        header{position: relative; padding-top: 15px; padding-bottom: 15px;}
-        .sliderhead{position: relative; top: 50%;
-            .sliderContainer{position: relative; align-items: center; flex: 1;padding: 45px 0 75px 0;
+        .sliderhead{position: relative; top: 300px;
+            .sliderContainer{padding: 45px 0 75px 0;
                 .contentContainer{width: 45%;margin-bottom: 145px;
                     h1{@include font60; font-family: $dancingFont; font-weight: $fontW700; margin-bottom: 15px; color: #fff;}
                     p{@include font16; color: #fff;font-weight: $fontW400; font-family: $openSans; margin-bottom: 20px; line-height: 160%;}
-                    button{padding: 10px 45px; background: $primary1; color: #fff; border-radius: 45px; transition: all 0.3s; border: none;margin-top: 10px;text-align: center; @include font20; font-family: $openSans; font-weight: $fontW500; cursor: pointer;
+                    button{padding: 10px 45px; background: $primary1; color: #fff; border-radius: 45px; transition: all 0.3s; border: none;margin-top: 10px;   text-align: center; @include font20; font-family: $openSans; font-weight: $fontW500; cursor: pointer;
                      &:hover{background: #e69c00;}
                     }
                 }
@@ -29,7 +28,8 @@
             }
         }
     }
-    @media all and (max-width: 1600px){
+    @media all and (max-width: 1800px){margin-bottom: 180px;}
+    @media all and (max-width: 1600px){margin-bottom: 140px;
         .heroWrapper{
             .sliderhead{
                 .sliderContainer{padding: 40px 0 70px 0;
@@ -38,9 +38,9 @@
             }
         }
     }
-    @media all and (max-width: 1440px){
+    @media all and (max-width: 1440px){margin-bottom: 120px;
         .heroWrapper{
-            .sliderhead{
+            .sliderhead{top: 250px;
                 .sliderContainer{
                     .contentContainer{margin-bottom: 100px;
                         button{padding: 10px 40px;}
@@ -49,9 +49,9 @@
             }
         }
     }
-    @media all and (max-width: 1280px){
+    @media all and (max-width: 1280px){margin-bottom: 100px;
         .heroWrapper{
-            .sliderhead{
+            .sliderhead{top: 180px;
                 .sliderContainer{padding: 40px 0 60px 0;
                     .contentContainer{margin-bottom: 80px;
                         button{padding: 10px 35px;}
@@ -62,14 +62,49 @@
     }
     @media all and (max-width: 1024px){
         .heroWrapper{
-            .bg-box{height: 50%;}
             .sliderhead{
                 .sliderContainer{padding: 40px 0 60px 0;
-                    .contentContainer{margin-bottom: 80px;width: 65%;
+                    .contentContainer{margin-bottom: 80px; width: 75%;
                         button{ padding: 10px 35px;}
                     }
                 }
             }
         }
+    }
+    @media all and (max-width: 820px) {
+       .heroWrapper{height: 100%; width: 100%; cursor: pointer;
+           .bg-box{ height: 100%;}
+           .sliderhead{top: 25%;
+                .sliderContainer{
+                    .contentContainer{
+                        h1{font-size: 60px;}
+                    }
+                }
+            }
+        } 
+    }
+    @media all and (max-width: 720px){
+        .heroWrapper{
+            .sliderhead{
+                .sliderContainer{
+                    .contentContainer{width: 100%;
+                        h1{font-size: 40px;}
+                    }
+                    .slick-dots{
+                        li{margin: 0 3px;
+                            button{
+                                &::before{color: #fff; font-size: 10px; opacity: 1;}
+                            }
+                            &.slick-active{
+                                button{
+                                    &::before{color: $primary1; @include font20;}
+                                }
+                            }
+                        }
+                        
+                    }
+                }
+            }
+         } 
     }
 }
