fix banner issue

--- a/client/src/scss/pages/_homepage.scss
+++ b/client/src/scss/pages/_homepage.scss
@@ -62,7 +62,7 @@
     }
     @media all and (max-width: 1024px){
         .heroWrapper{
-            .sliderhead{
+            .sliderhead{top: 300px;
                 .sliderContainer{padding: 40px 0 60px 0;
                     .contentContainer{margin-bottom: 80px; width: 75%;
                         button{ padding: 10px 35px;}
