--- a/client/src/scss/pages/_menu.scss
+++ b/client/src/scss/pages/_menu.scss
@@ -3,12 +3,44 @@
         .secHeading{display: flex; justify-content: center; align-items: center; margin-bottom: 45px;
             h2{@include font40; font-family: $dancingFont; font-weight: $fontW700; color: #000;}
         }
-        .contentContainer{
+        .contentContainer{ padding: 0 100px;
             .menuCardContainer{
-                .tabsList{margin-bottom: 20px;
+                .tabsList{margin-bottom: 30px;
                     ul{display: flex; align-items: center; justify-content: center; gap: 20px;
-                        li{}
+                        li{padding: 7px 25px; cursor: pointer; transition: all 0.3s ease;
+                            &.activeTab{background: #222831; color: white; border-radius: 25px; transform: scale(1.1); transition: all 0.3s ease; }
+                        }
                     }
+                }
+                .tabContent{
+                    .allCards{display: flex; align-items: center; flex-flow: wrap; gap: 30px;
+                        .card{width: calc(33.33% - 20px); position: relative; border-radius: 15px; overflow: hidden; background: linear-gradient(to bottom, #f1f2f3 40px, #222831 25px); transition: all 0.8s ease;
+                            .imgBox{background: #f1f2f3; display: flex; justify-content: center; align-items: center; height: 300px; border-radius:  0 0 0 45px; padding: 25px;
+                                img{width: 200px; height: 150px; transition: transform 0.3s ease-in-out;}
+                            }
+                            .contentBox{padding: 25px;
+                                h4{color: #ffffff; @include font20; font-weight: $fontW700; line-height: 170%; letter-spacing: 0.4px;font-family:$openSans;}
+                                & > p{color: #fff;@include font16; font-weight: $fontW400; line-height: 160%; letter-spacing: 0.48px; margin: 10px 0 20px 0;}
+                                .priceBox{display: flex; align-items: center; flex-flow: wrap; justify-content: space-between;
+                                 & > p{color: #fff; @include font16; font-family: $openSans; font-weight: $fontW400;}
+                                    span{width: 40px; height: 40px; border-radius: 100%; background: #ffbe33; display: flex; align-items: center; justify-content: center; cursor: pointer;
+                                        svg{
+                                            path{fill:#fff;height: 20px; width: 20px;}
+                                        }
+                                    }
+                                }
+                            }
+                            &:hover{
+                                .imgBox{img{transform: scale(1.5);}}
+                            }
+                        }
+                    }
+                }
+            }
+            .viewMore{margin-top: 45px; display: flex; align-items: center; justify-content: center;
+                button{padding: 10px 55px; background-color: #ffbe33; color: #fff; border-radius: 45px; transform: all 0.3s; border: none; cursor: pointer;}
+                &:hover{
+                    button{background: #e69c00;}
                 }
             }
         }
