--- a/client/src/scss/pages/_menu.scss
+++ b/client/src/scss/pages/_menu.scss
@@ -1,4 +1,4 @@
-.menuSection{margin-bottom: 200px;
+.menuSection{padding-top: 200px;
     .menuWrapper{@include wrapper;
         .secHeading{display: flex; justify-content: center; align-items: center; margin-bottom: 45px;
             h2{@include font40; font-family: $dancingFont; font-weight: $fontW700; color: #000;}
@@ -6,7 +6,7 @@
         .contentContainer{ padding: 0 100px;
             .menuCardContainer{
                 .tabsList{margin-bottom: 30px;
-                    ul{display: flex; align-items: center; justify-content: center; gap: 20px;
+                    ul{display: flex; align-items: center; justify-content: center; gap: 20px; flex-flow: wrap;
                         li{padding: 7px 25px; cursor: pointer; transition: all 0.3s ease;
                             &.activeTab{background: #222831; color: white; border-radius: 25px; transform: scale(1.1); transition: all 0.3s ease; }
                         }
@@ -38,9 +38,141 @@
                 }
             }
             .viewMore{margin-top: 45px; display: flex; align-items: center; justify-content: center;
-                button{padding: 10px 55px; background-color: #ffbe33; color: #fff; border-radius: 45px; transform: all 0.3s; border: none; cursor: pointer;}
+                button{padding: 10px 55px; background-color: #ffbe33; color: #fff; border-radius: 45px;border: none; cursor: pointer;}
                 &:hover{
                     button{background: #e69c00;}
+                }
+            }
+        }
+    }
+
+    @media all and (max-width: 1800px){padding-top: 180px;
+        .menuWrapper{
+            .contentContainer{
+                .menuCardContainer{
+                    .tabContent{
+                        .allCards{gap: 25px;
+                            .card{width: calc(33.33% - 17px);
+                                .imgBox{padding: 22px; height: 290px;}
+                                .contentBox{padding: 22px;
+                                    p{margin: 10px 0 18px 0;}
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    @media all and (max-width: 1600px){padding-top: 140px;
+        .menuWrapper{
+            .contentContainer{
+                .menuCardContainer{
+                    .tabContent{
+                        .allCards{gap: 22px;
+                            .card{width: calc(33.33% - 15px);
+                                .imgBox{padding: 20px; height: 280px;}
+                                .contentBox{padding: 20px;
+                                    p{margin: 10px 0 18px 0;}
+                                }
+                                &:hover{
+                                    .imgBox{img{transform: scale(1.2);}}
+                                }
+                            }
+                        }
+                    }
+                }
+                .viewMore{margin-top: 40px;}
+            }
+        }
+    }
+    @media all and (max-width: 1440px){padding-top: 120px;
+        .menuWrapper{
+            .contentContainer{
+                .menuCardContainer{
+                    .tabsList{
+                        ul{
+                            li{gap: 15px;}
+                        }
+                    }
+                    .tabContent{
+                        .allCards{gap: 20px;
+                            .card{width: calc(33.33% - 14px);
+                                .imgBox{padding: 15px; height: 250px;}
+                                .contentBox{padding: 15px;
+                                    p{margin: 8px 0 15px 0;}
+                                }
+                            }
+                        }
+                    }
+                }
+                .viewMore{margin-top: 35px;}
+            }
+        }
+    }
+    @media all and (max-width: 1280px){padding-top: 100px;
+        .menuWrapper{
+            .contentContainer{
+                .menuCardContainer{
+                    .tabContent{
+                        .allCards{gap: 15px;
+                            .card{width: calc(33.33% - 10px);
+                                .imgBox{padding: 12px;}
+                                .contentBox{padding: 12px;
+                                    p{margin: 8px 0 12px 0;}
+                                }
+                            }
+                        }
+                    }
+                }
+                .viewMore{margin-top: 30px;}
+            }
+        }
+    }
+    @media all and (max-width: 1024px){
+        .menuWrapper{
+            .contentContainer{padding: 0;
+                .menuCardContainer{
+                    .tabContent{
+                        .allCards{gap: 20px;
+                            .card{width: calc(33.33% - 14px);
+                                .imgBox{padding: 12px;}
+                                .contentBox{padding: 12px;}
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    @media all and (max-width: 820px){
+        .menuWrapper{
+            .contentContainer{
+                .menuCardContainer{
+                    .tabContent{
+                        .allCards{gap: 20px;
+                            .card{width: calc(50% - 10px);
+                                .imgBox{padding: 22px;}
+                                .contentBox{padding: 22px;}
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    @media all and (max-width: 720px){
+        .menuWrapper{
+            .secHeading{
+                h2{font-size: 30px;}
+            }
+            .contentContainer{
+                .menuCardContainer{
+                    .tabContent{
+                        .allCards{flex-flow: column;
+                            .card{width: calc(100% - 0px);}
+                        }
+                    }
                 }
             }
         }
