--- a/client/src/scss/base/_global.scss
+++ b/client/src/scss/base/_global.scss
@@ -452,6 +452,35 @@ body{
     padding-right: 20px;
   }
 }
+@mixin wrapperMargin {
+  margin-left: 200px;
+  margin-right: 200px;
+
+  @media all and (max-width: 1600px) {
+    margin-left: 160px;
+    margin-right: 160px;
+  }
+  @media all and (max-width: 1440px) {
+    margin-left: 140px;
+    margin-right: 140px;
+  }
+  @media all and (max-width: 1280px) {
+    margin-left: 120px;
+    margin-right: 120px;
+  }
+  @media all and (max-width: 1024px) {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+  @media all and (max-width: 820px) {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+  @media all and (max-width: 500px) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
 
 @mixin font60 {
   font-size: 60px;
