--- a/client/src/scss/pages/_register.scss
+++ b/client/src/scss/pages/_register.scss
@@ -37,10 +37,10 @@
     }
     @media all and (max-width: 1024px){
         .wrapper{
-            .formContainer{gap: 16px;
+            .formContainer{gap: 12px;
                 form{gap: 10px;
-                    input{width: 90%;}
-                    input[type="submit"]{margin-top: 14px; width: 30%; padding: 8px 16px;}
+                    input{width: 90%; padding: 12px 18px;}
+                    input[type="submit"]{margin-top: 14px; width: 28%; padding: 8px 16px;}
                 }
             }
         }
@@ -48,19 +48,22 @@
     @media all and (max-width: 820px){
         .wrapper{flex-flow: column; gap: 30px;
             .imgContainer{width: 100%;}
-            .formContainer{gap: 16px; width: 100%; padding: 20px 0;
+            .formContainer{gap: 35px; width: 100%; padding: 20px 0;
                 form{gap: 10px;
-                    input{width: 90%;}
-                    input[type="submit"]{margin-top: 14px; width: 30%; padding: 8px 16px;}
+                    input{width: 90%; padding: 14px 20px;}
+                    input[type="submit"]{margin-top: 20px; width: 20%; padding: 8px 16px;}
                 }
             }
         }
     }
     @media all and (max-width: 720px){
         .wrapper{gap: 20px;
-            .formContainer{gap: 20px; padding: 15px 0;
+            .formContainer{padding: 15px 0;
                 form{gap: 12px;
-                    input[type="submit"]{margin-top: 14px; width: 30%; padding: 8px 16px;}
+                    input[type="submit"]{margin-top: 15px; width: 30%;}
+                }
+                .signUpNote{
+                    a{font-size: 18px;}
                 }
             }
         }
