--- a/client/src/scss/pages/_login.scss
+++ b/client/src/scss/pages/_login.scss
@@ -1,15 +1,18 @@
 .loginSection{padding-top: 120px;
     .wrapper{@include wrapperMargin; display: flex; gap: 20px; margin-top: 80px; background: #ECEAE8;
         .imgContainer{width: 50%;
-            img{width: 100%; }
+            img{width: 100%; height: 100%; object-fit: cover;}
         }
         .formContainer{width: calc(50% - 40px); display: flex; align-items: center; flex-flow: column; align-items: center; justify-content: center; gap: 50px;
             h2{@include font30; font-weight: $fontW700;font-family: $openSans;
                 span{color: #ffbe33; font-weight: $fontW800; @include font36;}
             }
             form{display: flex; flex-flow: column;  justify-content: center; align-items:center; gap: 20px;width: 100%;
-                input{padding: 18px 24px; width: 80%;@include font20; font-family: $openSans; color: #000; 
-                 &::placeholder{@include font20; font-family: $openSans; color: #6e6f71;}
+                .inputContainer{width: 80%;
+                    input{padding: 18px 24px; width: 100%;@include font20; font-family: $openSans; color: #000; 
+                        &::placeholder{@include font20; font-family: $openSans; color: #6e6f71;}
+                    }
+                    p{color: red;font-size: 14px;margin-left: 8px;}
                 }
                 input[type="submit"]{display: inline-block; background: #ffbe33; width: 22%; margin-top: 50px; color: #fff; @include font24; font-weight: $fontW700; cursor: pointer; padding: 12px 24px;}
             }
@@ -26,9 +29,12 @@
         .wrapper{margin-top: 40px;
             .formContainer{
                 form{
-                    input{padding: 16px 22px;}
+                    .inputContainer{
+                        input{padding: 16px 22px;}
+                    }
                     input[type=submit]{width: 28%;}
                 }
+                    
             }
         }
     }
@@ -36,7 +42,9 @@
         .wrapper{margin-top: 30px;
             .formContainer{gap: 40px;
                 form{
-                    input{padding: 14px 20px;}
+                    .inputContainer{
+                        input{padding: 14px 20px;}
+                    }
                     input[type=submit]{width: 25%; margin-top: 40px;}
                 }
             }
@@ -46,8 +54,8 @@
         .wrapper{
             .formContainer{gap: 20px;
                 form{
-                    input{padding: 12px 18px;
-                    
+                    .inputContainer{
+                        input{padding: 12px 18px;}
                     }
                     input[type=submit]{width: 35%; margin-top: 15px; padding: 10px 15px;}
                 }
@@ -59,7 +67,9 @@
             .imgContainer{width: 100%;}
             .formContainer{gap: 30px; width: 100%;
                 form{
-                    input{padding: 12px 18px;}
+                    .inputContainer{
+                        input{padding: 12px 18px;}
+                    }
                     input[type=submit]{width: 35%; margin-top: 15px; padding: 10px 15px;}
                 }
                 .signUpNote{padding-bottom: 30px;}
