working on admin dashbord

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -11,3 +11,6 @@
 @import 'pages/_menu.scss';
 @import 'pages/_login.scss';
 @import 'pages/_register.scss';
+@import 'pages/_adminlayout.scss';
+@import 'pages/_adminNav.scss';
+@import 'pages/_adminUser.scss';
