--- a/client/src/scss/pages/_login.scss
+++ b/client/src/scss/pages/_login.scss
@@ -1,4 +1,4 @@
-.loginSection{padding-top: 120px;
+.loginSection{padding-top: 150px; margin-bottom: 100px;
     .wrapper{@include wrapperMargin; display: flex; gap: 20px; margin-top: 80px; background: #ECEAE8;
         .imgContainer{width: 50%;
             img{width: 100%; height: 100%; object-fit: cover;}
