--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -14,3 +14,4 @@
 @import 'pages/_adminlayout.scss';
 @import 'pages/_adminNav.scss';
 @import 'pages/_adminUser.scss';
+@import 'pages/_about.scss';
