book table page

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -15,3 +15,4 @@
 @import 'pages/_adminNav.scss';
 @import 'pages/_adminUser.scss';
 @import 'pages/_about.scss';
+@import 'pages/_table-book.scss';
