added the book table api

--- a/client/src/scss/base/_global.scss
+++ b/client/src/scss/base/_global.scss
@@ -668,3 +668,7 @@ $fontW900 : 900;
   .toastProgress {
     background: #333F48 !important;
   }
+
+  .hideScrollbarhtml, .hideScrollbar {
+    overflow: hidden !important;
+}
