--- a/client/src/scss/module/_header.scss
+++ b/client/src/scss/module/_header.scss
@@ -1,5 +1,5 @@
-header{display: flex; justify-content: space-between; align-items: center; @include wrapper;position: absolute; top: 0; left: 0; width: 100%; height: 100px; z-index: 1; background: #222831;
-    .logoName{
+header{display: flex; justify-content: space-between; align-items: center; @include wrapper;position: absolute; top: 0; left: 0; width: 100%; height: 100px; z-index: 9; background: #222831;
+    .logoName{position: relative; z-index: 9;
         span{color: #fff; font-family: $dancingFont; @include font48; font-weight: $fontW500;}
     }
     .navbar-link{padding-left: 20%;
@@ -35,6 +35,7 @@ header{display: flex; justify-content: space-between; align-items: center; @incl
         }
     }
     .hemburgerMenu{display: none;}
+    .mblheaderContainer{display: none;}
     
     
 }
@@ -72,17 +73,18 @@ header{display: flex; justify-content: space-between; align-items: center; @incl
     header{height: auto; padding-top: 30px; padding-bottom: 30px;
         .navbar-link{display: none;}
         .user-items{display: none;}
-        .hemburgerMenu{display: block;position: relative; z-index: 1;
+        .hemburgerMenu{display: block;position: relative; z-index: 9;
             svg{font-size: 30px;
                 path{fill:#fff;}
             }
             &:hover{svg{path{fill: #e69c00;}}}
         }
-        .mblheaderContainer{width: 100%;height: 100vh;position: absolute; top: 0; left: 0; background: #000; display: flex; align-items: center;justify-content: center; flex-flow: column; gap: 20px; transition: 2s ease-in;
+        .mblheaderContainer{width: 100%;height: 100vh;position: absolute; top: 0; left: 0; background: #000; display: flex; align-items: center;justify-content: center; flex-flow: column; gap: 20px; transition: all 0.8s ease-out;
+        transform: translateX(0);
             .mbl-navbar-link{
                 ul{display: flex; flex-flow: column; gap: 12px;
                     li{padding: 5px 20px; color: #fff; text-align: center; text-transform: uppercase; font-size: 22px; font-family: $openSans; font-weight: $fontW500;
-                     &:hover{color: $primary1;}
+                    &:hover{color: $primary1;}
                     }
                 }
             }
