--- a/client/src/scss/pages/_table-book.scss
+++ b/client/src/scss/pages/_table-book.scss
@@ -1,23 +1,72 @@
 .tableSection{
   .tableWrapper{@include wrapperMargin; padding: 170px 0 120px ;
     h2{color: #000; font-family: $dancingFont; @include font40; font-weight: bold; margin-bottom: 40px;}
-    .mainContainer{display: flex; justify-content: center; gap: 50px;
+    .mainContainer{display: flex; justify-content: space-between; gap: 50px;
       .formContainer{width: 50%;
       form{
-        .inputContainer{padding: 10px 20px; width: 100%;@include font18; font-family: $openSans; color: #000; border:  1px solid #999; margin-bottom: 25px;
-          input{width: 100%; color: #000;
+        .inputContainer{width: 100%;@include font18; font-family: $openSans; color: #000;  margin-bottom: 25px;
+          input{width: 100%; color: #000; padding: 10px 20px; border:  1px solid #999;
             &::placeholder{@include font20; font-family: $openSans; color: #000;}
           }
-          select{width: 100%; color: #000;
+          input[type="date"]{cursor: pointer; padding: 10px 20px; border:  1px solid #999;}
+          select{width: 100%; color: #000; cursor: pointer; padding: 10px 20px; border:  1px solid #999;
+            appearance: none; /* Disable the default arrow */
+            -webkit-appearance: none; /* For WebKit-based browsers */
+            -moz-appearance: none; /* For Firefox */
+            background-image: url('data:image/svg+xml;utf8,<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor"/></svg>');
+            background-repeat: no-repeat; background-position: right 10px center; background-size: 18px;
             option{color: #000;}
           }
+          p{color:#FF0000; padding-left: 5px; padding-top: 5px}
         }
         input[type="submit"]{@include font18; font-weight: $fontW700; cursor: pointer; text-transform: uppercase; display: inline-block; padding: 10px 35px; background-color: #ffbe33; color: #ffffff; border-radius: 45px; -webkit-transition: all 0.3s; transition: all 0.3s; border: none;
           &:hover{background-color: #e69c00;}
         }
       }
     }
-    .mapBox{width: 50%; border-radius: 20px; overflow: hidden;}
+    .mapBox{width: 50%; border-radius: 20px; overflow: hidden;
+      .mapContainer{height: 100%; position: relative; z-index: 2 !important;}
+    }
+    }
+  }
+
+  @media  all and (max-width: 1600px) {
+    .tableWrapper{padding: 150px 0 120px;
+      .mainContainer{
+        .formContainer{width: 45%;}
+        .mapBox{width: 55%;}
+      }
+    }
+  }
+  @media  all and (max-width: 1280px) {
+    .tableWrapper{padding: 140px 0 100px;
+      h2{margin-bottom: 30px;}
+      .mainContainer{
+        .formContainer{width: 45%;}
+        .mapBox{width: 55%;}
+      }
+    }
+  }
+  @media  all and (max-width: 820px) {
+    .tableWrapper{padding: 140px 0 100px;
+      h2{margin-bottom: 25px;}
+      .mainContainer{flex-flow: column;
+        .formContainer{width: 100%;}
+        .mapBox{width: 100%;
+          .mapContainer{height: 400px;}
+        }
+      }
+    }
+  }
+  @media  all and (max-width: 720px) {
+    .tableWrapper{padding: 100px 0;
+      h2{margin-bottom: 20px; font-size: 28px;}
+      .mainContainer{flex-flow: column;
+        .formContainer{width: 100%;}
+        .mapBox{width: 100%;
+          .mapContainer{height: 300px;}
+        }
+      }
     }
   }
 }
