--- a/client/src/scss/pages/_offerCard.scss
+++ b/client/src/scss/pages/_offerCard.scss
@@ -2,7 +2,7 @@
     .offerWrapper{@include wrapper;
         .offerCardContainer{ padding: 0 100px;display: flex; gap:20px; justify-content: center; align-items: center;
             .card{background: #222831;display: flex; flex-flow: wrap; align-items: center; gap: 20px;padding: 20px 15px; width: calc(50% - 10px); border-radius: 5px;  transition: all 0.8s ease-in-out;
-                .imgBox{width: 175px; height: 175px; position: relative; border-radius: 100%; border: 5px solid #ffbe33; overflow: hidden;
+                .imgBox{width: 175px; height: 175px; position: relative; border-radius: 100%; border: 5px solid #ffbe33; overflow: hidden; display: flex; align-items: center; justify-content: center;
                     img{transition: transform 0.3s ease-in-out;}
                 }
                 .contentBox{
